<resources>
    <string name="app_name">MIRESI</string>
    <string name="emailTitle">Email</string>
    <string name="passwordTitle">Password</string>
    <string name="goSignup">Have you forgotten your password?</string>
    <string name="clickHere">Click here</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pref_loged_user">pref_login</string>
    <string name="hello_blank_fragment">Hello from Resi Fragment!!</string>
    <string name="signup">Sign up</string>
    <string name="confirmpassTitle">Confirm Password</string>
    <string name="name">Name</string>
    <string name="location">location</string>
    <string name="bedroom">bedroom</string>
    <string name="forum">Forum</string>
    <string name="profile">Profile</string>
    <string name="city">Cities</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search City...</string>
    <string name="home">Home</string>
    <string name="wishList">Wish List</string>
    <string name="room">Rooms</string>
    <string name="recent">Recently Search</string>
    <string name="from">FROM</string>
    <string name="messenge">Messenge</string>
    <string name="who">Who</string>
    <string name="readMore">Read more</string>
    <string name="readLess">Read Less</string>
    <string name="facilitiesServices">Facilities and Services</string>
    <string name="gym">Gym</string>
    <string name="carParking">Car Parking</string>
    <string name="pool">Pool</string>
    <string name="bikeParking">Bicycle Parking</string>
    <string name="studyRoom">Study Room</string>
    <string name="laundryRoom">Laundry Room</string>
    <string name="createPost">Create your Post</string>
    <string name="dateStart">YYYY-MM-DD</string>
    <string name="to">To</string>
    <string name="postTittle">Habitación Individual Superior</string>
    <string name="postsubTittle">en Residencia Universitaria Aleu</string>
    <string name="postDate">30/08/2022 - 01/062023</string>
    <string name="publishedBy">By</string>
    <string name="priceRoom">€550</string>
    <string name="userName">Emilio Botier</string>
    <string name="goChat">Chat</string>
    <string name="see">See</string>
    <string name="residence">Residences</string>
    <string name="nameResi">Resicencia Universitaria</string>
    <string name="comments">Comments</string>
    <string name="seeAllComments">View All comments</string>
    <string name="forumtitle">Title of the Forum</string>
    <string name="forumDate">10/04/2022</string>
    <string name="bacelona">Barcelona</string>
    <string name="forums">Forums</string>
    <string name="reload">Reload</string>
    <string name="post">Posts</string>
    <string name="food">Food</string>
    <string name="favourite">favourite</string>
    <string name="createForum">Create Forum</string>
    <string name="Title">Title</string>
    <string name="tag">tag</string>
    <string name="longText">this is a long text to see how the comment section look like :)</string>
    <string name="reply">Reply</string>
    <string name="like">Like</string>
    <string name="tags">Tags</string>
    <string name="create">Create</string>
    <string name="accountSettings">Account Settings</string>
    <string name="country">Country/region</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="desactiveAccount">Desactive Account</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log out</string>
    <string name="none">None</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="personalInfo">Personal Information</string>
    <string name="permisions">Permisions</string>
    <string name="notifications">Notifications</string>
    <string name="privacy"><![CDATA[Privacy & data]]></string>
    <string name="actions">Actions</string>
    <string name="support">Support</string>
    <string name="help">Get help</string>
    <string name="termsPravacy"><![CDATA[Terms & Pravacy]]></string>
    <string name="currentChats">Current Chats</string>
    <string name="icon">Icon</string>
    <string name="currentForums">Last Forums</string>
</resources>