<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/pageHome"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>
    <item
        android:id="@+id/pageRoom"
        android:enabled="true"
        android:icon="@drawable/bed_24"
        android:title="@string/room"/>
    <item
        android:id="@+id/pageForum"
        android:enabled="true"
        android:icon="@drawable/forum_24"
        android:title="@string/forum"
        />
    <item
        android:id="@+id/pageFavorite"
        android:enabled="true"
        android:icon="@drawable/favorite_24"
        android:title="@string/wishList"/>
    <item
        android:id="@+id/pageProfile"
        android:enabled="true"
        android:icon="@drawable/person_24"
        android:title="@string/profile"/>
</menu>