<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.SettingFragment"

    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_24"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/dimenst_20"
            android:textColor="@color/black_200"
            android:textStyle="bold"
            />
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/personalInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settingsToolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/personalInfo"
        style="@style/settingsTitle"

        />

    <LinearLayout
        android:id="@+id/infoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/personalInfoTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_20"
        >

        <TextView
            android:id="@+id/goToAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            style="@style/settingsSubTitle"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permisions"
            style="@style/settingsSubTitle"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            style="@style/settingsSubTitle"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            style="@style/settingsSubTitle"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/actionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/infoContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/actions"
        style="@style/settingsTitle"
        />
    <LinearLayout
        android:id="@+id/actionsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/actionsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_20"
        >

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/black_200"
            android:textSize="@dimen/dimenst_25"
            android:layout_marginStart="@dimen/dimen_5"
            android:layout_marginBottom="@dimen/dimen_20"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/actionsContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/support"
        style="@style/settingsTitle"

        />
    <LinearLayout
        android:id="@+id/supportContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_20"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            style="@style/settingsSubTitle"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/termsPravacy"
            style="@style/settingsSubTitle"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>