<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/passwordfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/emailfield"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/fieldsLogin"
        >
        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordTitle"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/dimen_10"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10"
            android:background="@drawable/login_input_corner"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/remove_red_eye_24"
            android:layout_marginBottom="@dimen/dimen_5"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goSignup"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clickHere"
                android:textColor="@color/blue_200"
                android:layout_marginStart="@dimen/dimen_5"
                />
        </LinearLayout>
    </LinearLayout>

</merge>